Update jvm-parameters-intro.md
垃圾回收器使用开关命令纠正